--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.5.1",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.recorder": "3.0.3",
     "com.unity.render-pipelines.universal": "12.1.11",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
